--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS_NEWS</title>
+    <title>CSS_NEWS_Raphael</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body {
@@ -19,7 +19,7 @@
 
     <h1 class="text-3xl font-bold text-pink-600 mb-4">Bem-Vindo ao Carnaval do Rio</h1>
 
-    <img src="danca.png" alt="Dança típica do Carnaval do Rio de Janeiro" class="w-80 mb-4">
+    <img src="/danca.png" alt="Dança típica do Carnaval do Rio de Janeiro" class="w-80 mb-4">
 
     <section class="mt-4 text-center">
         <h2 class="text-3xl font-bold text-black mb-2">O Carnaval</h2>
@@ -57,7 +57,124 @@
             indígenas, africanas e europeias. As festividades são marcadas por danças, músicas e lendas que refletem a
             diversidade e a história do Brasil, tornando o Carnaval uma celebração única e vibrante.
         </p>
+        <p>
+            <span style="color:brown">Influências Culturais :</span> O Carnaval do Rio de Janeiro é influenciado por
+            diversas culturas, incluindo
+            indígenas,
+            africanas e europeias, que se entrelaçam nas tradições e celebrações.
+
+        </p>
+
+        <p>
+
+            <span style="color:brown">Músicas e Danças :</span> As músicas de Carnaval, como sambas e marchinhas, são
+            acompanhadas por danças típicas,
+            como a quadrilha, que trazem um aspecto festivo e comunitário.
+
+        </p>
+
+        <p>
+            <span style="color:brown">Personagens Folclóricos :</span> Durante o Carnaval, personagens folclóricos como
+            o "Cuca" e o "Saci" podem ser
+            vistos em fantasias, representando a rica mitologia brasileira.
+
+        </p>
+
+        <p>
+            <span style="color:brown">Festas e Desfiles :</span> Os desfiles das escolas de samba são uma das principais
+            atrações, onde a criatividade
+            e a arte se manifestam em carros alegóricos e fantasias elaboradas.
+
+        </p>
+
+        <p>
+            <span style="color:brown">Ritual de Celebração :</span> O Carnaval é um momento de celebração e união, onde
+            as comunidades se reúnem para
+            festejar, refletindo a identidade cultural do povo carioca.
+        </p>
+
     </section>
+    <section class="mt-4 text-center">
+
+        <h2 class="text-3xl font-bold text-black mb-4">Importância do Carnaval</h2>
+        <p>
+            <span style="color:brown">Identidade Cultural :</span> O Carnaval é uma expressão da identidade cultural do
+            Brasil, promovendo a
+            diversidade e a inclusão social.
+        </p>
+        <p>
+            <span style="color:brown">Turismo :</span> A festividade atrai milhões de turistas de todo o mundo,
+            contribuindo
+            significativamente para a economia local.
+        </p>
+        <p>
+            <span style="color:brown"> Preservação de Tradições :</span> O Carnaval ajuda a preservar e transmitir
+            tradições
+            folclóricas,
+            garantindo que as novas gerações conheçam e valorizem sua herança cultural.
+        </p>
+    </section>
+    <section class="mt-4 text-center">
+        <h2 class="text-3xl font-bold text-black mb-4">Economia do Estado no Periodo de Carnaval</h2>
+        <p>
+            O Carnaval no Rio de Janeiro é um evento econômico significativo, gerando cerca de R$ 5 bilhões.
+            A festa impactou setores como turismo, comércio e serviços, atraindo milhões de visitantes e
+            promovendo a criação de empregos temporários.
+        </p>
+        <p>
+            Além do impacto financeiro, o Carnaval valoriza a cultura carioca. As escolas de samba, que se
+            preparam o ano todo, atraem turistas e envolvem artistas e músicos, gerando um ciclo de
+            investimento e inovação.
+        </p>
+        <p>
+            Por fim, o Carnaval promove o Rio de Janeiro como um destino turístico de destaque.
+            A visibilidade durante a festa pode aumentar o turismo ao longo do ano, tornando o Carnaval um
+            motor econômico vital para a cidade.
+        </p>
+
+    </section>
+
+    <section class="mt-4 text-center">
+        <h2 class="text-3xl font-bold text-black mb-4">Vestimentas</h2>
+        <p>
+            As vestimentas do Carnaval do Rio de Janeiro são conhecidas por sua diversidade e criatividade.
+            As fantasias variam desde trajes elaborados das escolas de samba até opções mais simples e coloridas
+            para os blocos de rua, refletindo a cultura vibrante e a alegria do evento.
+        </p>
+        <p>
+            <span style="color:brown">Fantasias de Escolas de Samba :</span> Luxuosas e elaboradas, com plumas e
+            brilhos, como as da Portela e Mangueira.
+        </p>
+        <p>
+            <span style="color:brown">Fantasias de Blocos de Rua :</span> Criativas e leves, como as do bloco
+            Carmelitas, que trazem um toque humorístico.
+        </p>
+        <p>
+            <span style="color:brown">Trajes Tradicionais :</span> Como o vestido de baiana, com turbantes e colares, e
+            roupas de sambista, com saias curtas.
+        </p>
+        <p>
+            <span style="color:brown">Fantasias Temáticas :</span> Baseadas em super-heróis ou animais, refletindo uma
+            cultura pop.
+        </p>
+    </section>
+    <section class="mt-4 text-center">
+        <h2 class="text-3xl font-bold text-black mb-4">Conclusão</h2>
+        <p>
+            Em suma, o Carnaval do Rio de Janeiro é uma celebração que vai além da festa; é uma expressão vibrante da
+            cultura brasileira, que une pessoas de todas as idades e origens. Ao vivenciar essa experiência única, somos
+            lembrados da importância da alegria, da criatividade e da união. Que a magia do Carnaval continue a inspirar
+            e a encantar, não apenas durante os dias de folia, mas ao longo de todo o ano. Venha fazer parte dessa festa
+            e celebrar a vida com as pessoas!
+        </p>
+    </section>
+    <footer class="text-center mt-4">
+        <p>
+            <span style="color:gray">Criado por <a href="raficzn.github.io/seeyouapp/" target="_blank">Raphael e
+                    Cleyson</a> - 2025 / Prof.
+                Douglas</span>
+        </p>
+    </footer>
 
 </body>
 
