--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS_NEWS_Raphael</title>
+    <title>CSS_NEWS</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body {
@@ -170,7 +170,7 @@
     </section>
     <footer class="text-center mt-4">
         <p>
-            <span style="color:gray">Criado por <a href="raficzn.github.io/seeyouapp/" target="_blank">Raphael e
+            <span style="color:gray">Criado por <a href="https://github.com/raficzn" target="_blank">Raphael e
                     Cleyson</a> - 2025 / Prof.
                 Douglas</span>
         </p>
