--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <h1 class="text-3xl font-bold text-pink-600 mb-4">Bem-Vindo ao Carnaval do Rio</h1>
 
-    <img src="danca.png" alt="Dança típica do Carnaval do Rio de Janeiro" class="w-80 mb-4">
+    <img src="/danca.png" alt="Dança típica do Carnaval do Rio de Janeiro" class="w-80 mb-4">
 
     <section class="mt-4 text-center">
         <h2 class="text-3xl font-bold text-black mb-2">O Carnaval</h2>
