--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
 
     <h1 class="text-3xl font-bold text-pink-600 mb-4">Bem-Vindo ao Carnaval do Rio</h1>
 
-    <img src="/danca.png" alt="Dança típica do Carnaval do Rio de Janeiro" class="w-80 mb-4">
-
     <section class="mt-4 text-center">
         <h2 class="text-3xl font-bold text-black mb-2">O Carnaval</h2>
+
+        <img src="/bloco.png" alt="o carnaval eh uma das festas mais aguardadas pelos brasileiro no ano"
+            class="w-80 mb-4 mx-auto">
         <p>
             O Carnaval do Rio de Janeiro é uma das festas mais icônicas do Brasil, celebrada anualmente com desfiles de
             escolas de samba, blocos de rua e bailes. Suas raízes remontam ao período colonial, e a festa é conhecida
@@ -42,6 +43,9 @@
 
     <section class="mt-4 text-center">
         <h2 class="text-3xl font-bold text-black mb-2">O Ano das Escolas de Samba</h2>
+
+        <img src="escolas.png" alt="as escolas de samba: as principais atracoes do carnaval do Rio"
+            class="w-80 mb-4 mx-auto">
         <p>
             Na década de 1920, surgiram as escolas de samba, com a primeira delas, a Deixa Falar, sendo fundada em 1928.
             Os desfiles de escolas de samba se tornaram o destaque do Carnaval, com carros alegóricos e fantasias
@@ -52,6 +56,9 @@
 
     <section class="mt-4 text-center">
         <h2 class="text-3xl font-bold text-black mb-2">O Folclore no Carnaval</h2>
+
+        <img src="folclore.png" alt="folclore carnavanesco" class="w-80 mb-4 mx-auto">
+
         <p>
             O folclore do Carnaval do Rio de Janeiro é uma rica mistura de tradições culturais, incluindo influências
             indígenas, africanas e europeias. As festividades são marcadas por danças, músicas e lendas que refletem a
@@ -97,6 +104,9 @@
     <section class="mt-4 text-center">
 
         <h2 class="text-3xl font-bold text-black mb-4">Importância do Carnaval</h2>
+
+        <img src="cultura.png" alt="a cultura do carnaval eh uma das principais importancias do carnaval"
+            class="w-80 mb-4 mx-auto">
         <p>
             <span style="color:brown">Identidade Cultural :</span> O Carnaval é uma expressão da identidade cultural do
             Brasil, promovendo a
@@ -116,6 +126,8 @@
     </section>
     <section class="mt-4 text-center">
         <h2 class="text-3xl font-bold text-black mb-4">Economia do Estado no Periodo de Carnaval</h2>
+
+        <img src="economia.png" alt="a economia do carnaval aumenta a cada ano " class="w-80 mb-4 mx-auto">
         <p>
             O Carnaval no Rio de Janeiro é um evento econômico significativo, gerando cerca de R$ 5 bilhões.
             A festa impactou setores como turismo, comércio e serviços, atraindo milhões de visitantes e
@@ -136,10 +148,12 @@
 
     <section class="mt-4 text-center">
         <h2 class="text-3xl font-bold text-black mb-4">Vestimentas</h2>
-        <p>
-            As vestimentas do Carnaval do Rio de Janeiro são conhecidas por sua diversidade e criatividade.
-            As fantasias variam desde trajes elaborados das escolas de samba até opções mais simples e coloridas
-            para os blocos de rua, refletindo a cultura vibrante e a alegria do evento.
+
+        <img src="vestimentas.png" alt="vestimentas populares no carnaval do Rio de Janeiro" class="w-80 mb-4 mx-auto"
+            <p>
+        As vestimentas do Carnaval do Rio de Janeiro são conhecidas por sua diversidade e criatividade.
+        As fantasias variam desde trajes elaborados das escolas de samba até opções mais simples e coloridas
+        para os blocos de rua, refletindo a cultura vibrante e a alegria do evento.
         </p>
         <p>
             <span style="color:brown">Fantasias de Escolas de Samba :</span> Luxuosas e elaboradas, com plumas e
@@ -160,6 +174,8 @@
     </section>
     <section class="mt-4 text-center">
         <h2 class="text-3xl font-bold text-black mb-4">Conclusão</h2>
+
+        <img src="danca.png" alt="Dança típica do Carnaval do Rio de Janeiro" class="w-80 mb-4 mx-auto">
         <p>
             Em suma, o Carnaval do Rio de Janeiro é uma celebração que vai além da festa; é uma expressão vibrante da
             cultura brasileira, que une pessoas de todas as idades e origens. Ao vivenciar essa experiência única, somos
