--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <section class="mt-4 text-center">
         <h2 class="text-3xl font-bold text-black mb-2">O Carnaval</h2>
 
-        <img src="/bloco.png" alt="o carnaval eh uma das festas mais aguardadas pelos brasileiro no ano"
+        <img src="blocos.png" alt="o carnaval eh uma das festas mais aguardadas pelos brasileiro no ano"
             class="w-80 mb-4 mx-auto">
         <p>
             O Carnaval do Rio de Janeiro é uma das festas mais icônicas do Brasil, celebrada anualmente com desfiles de
